Feat/109 apply event feedback week13 (#110)
* feat(event): rename collection objects (remove List keyword) #109

* chore(event): refactor with applying factory method in expandedRecurringEvents #109

* chore(event): refactor recurringEventService #109

* feat(event): refactor expandRecurringEvent #109